# DM_Utils

./: README.md  fe2_contribution.py  fe2_ha_contribution.py  fe2_hb_contribution.py  fe2_mg2_contribution.py  host_contribution.py  howto.md  ideal_structure.md  move_line_profs.py  object.py  plots.py  pyproject.toml  utils.py
examples/: run_fe2.py  run_host.py  run_pyqsofit.py  singlefit_constants.py
scripts/: move_old_results.py  run_pypetal.py  run_pyqsofit.py  singlefit_constants.py
src/dm_utils/: __init__.py
src/dm_utils/specfit/: __init__.py  fe2_ha_contribution.py
src/dmutils/: __init__.py  input.py  plot_multiple.py  plots.py  utils.py
src/dmutils/postprocess/: __init__.py  binlc.py  data.py  lags.py  modelgen.py  modelmath.py  multires.py  result.py
src/dmutils/specfit/: __init__.py  fe2_contribution.py  fe2_ha_contribution.py  fe2_hb_contribution.DEPRECATED  fe2_hb_contribution.py  fe2_mg2_contribution.py  fit_lines.py  host_contribution.DEPRECATED  host_contribution.py  make_file_strcuture.py  move_line_profs.py  object.py  qsopar.py
